--- a/Contact.html
+++ b/Contact.html
@@ -14,15 +14,18 @@
       <li>Phone : 03361883085</li>
       <li>Address: chakar road Sibi</li>
     </ol>
-    <hr>
-    <form  action="mailto:ghulammustafa.cs.uob@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name</label>
-      <input type="text" name="YourName" value="" /> <br />
-      <label>Your Email</label>
-      <input type="email" name="YourEmail" value=""/> <br>
-      <label> Your Message</label> <br>
-      <textarea name="YourMessage" cols="30" rows="10"></textarea> <br>
-      <input type="submit" name="" />
+    <hr />
+    <form action="send_email.php" method="POST">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" required /><br /><br />
+
+      <label for="email">Email:</label><br />
+      <input type="email" id="email" name="email" required /><br /><br />
+
+      <label for="message">Message:</label><br />
+      <textarea id="message" name="message" required></textarea><br /><br />
+
+      <input type="submit" value="Send Message" />
     </form>
   </body>
 </html>
